<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Falcon Scout</string>
    <string name="action_settings">Settings</string>
    <string name="log_tag">[SCOUTING]</string>
    <string name="action_about">About</string>
    <string name="about_name">About</string>
    <string name="about_long_text">"Welcome to a whole new way to scout robots! With this app, in addition to the Mac app located on team 4557's website, scouting robots is as easy as clicking a few buttons.

Please visit http://www.fullmetalfalcons.org to download the Mac application, and get started.

Email us at robotics@xavierhighschool.org with any questions. Below is more information on how to use this

Prior to downloading the Mac application, make sure your Mac is equipped with Bluetooth Low Energy (BLE). You can check this in System Information.

After installing and opening the Mac app, make sure Bluetooth is enabled on both this device and the computer. Then…

1. Enter the same passkey on both the Mac and Phone apps and press the "refresh" buttons on both
2. After completing the form, press the "DONE" button at the bottom. On the Mac, when ready to get all the data, just press the "Compile to Excel" button.
3. And that's it! Scout away!"</string>
    <string name="about_credits_text">"This app was created by Dan Herlihy and Alex DeMeo for FRC Team 4557: The FullMetal Falcons"</string>
    <string-array name="value_array">
        <item>Raw Value</item>
        <item>Average</item>
    </string-array>
    <string-array name="operator_array">
        <item>=</item>
        <item>&gt;</item>
        <item>&lt;</item>
        <item>≥</item>
        <item>≤</item>
        <item>≠</item>
    </string-array>
    <string name="key_team_num" tools:ignore="UnusedResources">team_num</string>
    <string name="key_match_num" tools:ignore="UnusedResources">match_num</string>
    <string name="key_team_color" tools:ignore="UnusedResources">team_color</string>
    <string name="key_num_matches" tools:ignore="UnusedResources">num_matches</string>
    <string name="key_match_nums" tools:ignore="UnusedResources">match_nums</string>
    <string name="bluetooth_code_label">Bluetooth Code</string>
    <string name="bluetooth_code_hint">ex. 333B</string>
    <string name="connection_label">Connection:</string>
    <string name="advertising_label">Advertising:</string>
    <string name="retrieve_description_label">Retrieve a single team or search for teams that meet certain criteria</string>
    <string name="team_number_label">Team Number</string>
    <string name="retrieve_or">Or:</string>
    <string name="retrieve_value_hint">Value</string>
    <string name="search_button_text">Search</string>
    <string name="general_scouting_header">General</string>
    <string name="match_number_label">Match Number</string>
    <string name="alliance_color_label">Alliance Color</string>
    <string name="clear_label">Clear Form</string>
    <string name="clear_button_text">Clear</string>
    <string name="refresh_button_description">Refresh Button</string>
    <string name="main_logo_description">Main Logo</string>
    <string name="title_activity_retrieve_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_team_number">Team Number</string>
    <string name="pref_default_team_number">0000</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_remote">Remote Retrieve</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Remote Retrieve Settings</string>
    <string name="pref_description_enable_remote">Retrieve data from a remote database instead of a local database. (Requires Internet Access)</string>
    <string name="pref_title_enable_remote">Remote Retrieval</string>
    <string name="pref_default_remote_password">fubar</string>
    <string name="pref_title_remote_password">Password</string>


</resources>
