<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="remote_enabled_switch"
        android:summary="@string/pref_description_enable_remote"
        android:title="@string/pref_title_enable_remote" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:defaultValue="@string/pref_default_team_number"
        android:inputType="number"
        android:key="remote_team_num"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_team_number" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_remote_password"
        android:inputType="textPassword"
        android:key="remote_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="hidden"
        android:title="@string/pref_title_remote_password" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
